# gambatools

./: README.md  requirements.txt  setup.cfg
.github/workflows/: deploy-latex.yml  run-tests-ubuntu.yml  run-tests-windows.yml
doc/: main.bib  main.tex
examples/: cfg1.cfg  cfg2.cfg  chomsky1.cfg  complement.dfa  dfa1.dfa  dfa2.dfa  intersection1.dfa  intersection2.dfa  minimal.dfa  nfa1.nfa  nfa2.nfa  pda-simple.pda  pda1.pda  pda2.pda  pda3.pda  pda4.pda  regexp1.regexp  reverse.dfa  sipser-1.6b.dfa  symmetric_difference1.dfa  symmetric_difference2.dfa  test1.cfg  test1.dfa  test2.dfa  tm1.tm  union1.dfa  union2.dfa
notebooks/: make_notebook.py  notebooks.batch
notebooks/templates/: cfg-cyk-algorithm.ipynb  cfg-derivation.ipynb  cfg-for-language.ipynb  cfg-leftmost-derivation.ipynb  cfg-rightmost-derivation.ipynb  cfg-to-chomsky.ipynb  dfa-complement.ipynb  dfa-for-language.ipynb  dfa-hopfcroft.ipynb  dfa-intersection.ipynb  dfa-minimal.ipynb  dfa-reverse.ipynb  dfa-symmetric_difference.ipynb  dfa-to-regexp.ipynb  dfa-union.ipynb  nfa-for-language.ipynb  nfa-to-dfa.ipynb  pda-for-language.ipynb  regexp-for-language.ipynb  tm-for-language.ipynb
notebooks/with-answers/: cfg-cyk-algorithm.ipynb  cfg-derivation.ipynb  cfg-for-language.ipynb  cfg-leftmost-derivation.ipynb  (+15 more)
release/: make_release
tests/: test_automata.py  test_automaton_algorithms.py  test_cfg.py  test_cfg_algorithms.py  test_dfa_algorithms.py  test_language_algorithms.py  test_nfa_algorithms.py  test_pda_algorithms.py  test_regexp.py  test_regexp_algorithms.py  test_tm_algorithms.py
(+73 files in other folders)
