[metadata]
name = gambatools
version = 0.12
author = Wieger Wesselink
author_email = j.w.wesselink@tue.nl
description = A library for formal language education. It contains support for DFAs, NFAs, PDAs, Turing machines, context free grammars and regular expressions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wiegerw/gambatools
project_urls =
    Bug Tracker = https://github.com/wiegerw/gambatools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

